2012-03-23  Jesus Sanchez-Palencia  <jesus.palencia@openbossa.org>

        [Qt][WK2] Implement PageClient::isViewWindowActive()
        https://bugs.webkit.org/show_bug.cgi?id=81143

        Reviewed by Kenneth Rohde Christiansen.

        This patch implements PageClient::isViewWindowActive()
        now that QQuickCanvas::isActive() is available (from QWindow).

        * UIProcess/qt/QtPageClient.cpp:
        (QtPageClient::isViewWindowActive):

2012-03-23  Andras Becsi  <andras.becsi@nokia.com>

        [Qt][WK2] Disable the flickable when pinching.

        Reviewed by Kenneth Rohde Christiansen.

        Set the interactivity of the internal flickable to false
        when pinching so that it does not react to mouse events
        which might break pinch zoom.
        This is a temporal workaround and needed until the event
        propagation in QtQuick is fixed.

        * UIProcess/qt/QtViewportInteractionEngine.cpp:
        (WebKit::QtViewportInteractionEngine::scaleAnimationStateChanged):
        (WebKit::QtViewportInteractionEngine::pinchGestureStarted):
        (WebKit::QtViewportInteractionEngine::pinchGestureEnded):

2012-03-23  Ryosuke Niwa  <rniwa@webkit.org>

        REGRESSION(r111754): plugins/reloadplugins-and-pages.html fails on all platforms
        https://bugs.webkit.org/show_bug.cgi?id=82035

        * win/WebKit2.def:
        * win/WebKit2CFLite.def:

2012-03-22  Anders Carlsson  <andersca@apple.com>

        Remove the Flash NPRuntime short-circuit hacks
        https://bugs.webkit.org/show_bug.cgi?id=81997
        <rdar://problem/10409289>

        Reviewed by Sam Weinig.

        This code was added to help speed up Flash plug-in instantiation by reducing the number of
        synchronous API calls from the plug-in process to the web process during instantiation.
        However, there was no real indication that this actually improved performance.
