@@ -1,3 +1,14 @@
+2012-03-23  Sheriff Bot  <webkit.review.bot@gmail.com>
+
+        Unreviewed, rolling out r111855.
+        http://trac.webkit.org/changeset/111855
+        https://bugs.webkit.org/show_bug.cgi?id=82053
+
+        It broke 30+ tests (Requested by Ossy on #webkit).
+
+        * UIProcess/qt/QtPageClient.cpp:
+        (QtPageClient::isViewWindowActive):
+
 2012-03-23  Jesus Sanchez-Palencia  <jesus.palencia@openbossa.org>
 
         [Qt][WK2] Implement PageClient::isViewWindowActive()
